Fix table overflow

--- a/src/App.css
+++ b/src/App.css
@@ -120,6 +120,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .form-container select, .form-container input{
@@ -178,11 +179,15 @@ input:focus, select:focus {
 
 .center-text {
   text-align: center;
-  margin-bottom: 20px;
+}
+
+.public-title {
+  margin: 0;
 }
 
 .table-container {
   overflow-x: auto;
+  overflow-y: auto;
 }
 
 .evidence-table th, .evidence-table td {
@@ -194,7 +199,6 @@ input:focus, select:focus {
 .evidence-table {
   width: 100%;
   border-collapse: collapse;
-  margin: 20px 0;
   font-size: 15px;
   text-align: left;
   overflow-x: auto;
@@ -221,7 +225,6 @@ input:focus, select:focus {
 .evidence-table-penalties {
   width: 100%;
   border-collapse: collapse;
-  margin: 20px 0;
   font-size: 15px;
   text-align: left;
   overflow-x: auto;
